--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Poppins:wght@400;700&family=Roboto+Condensed&display=swap');
 
 * {
     margin: 0;
     padding: 0;
-    font-family: arial, 'Roboto Condensed', sans-serif;
+    font-family: 'Inter', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .btn-primary {
@@ -96,4 +99,50 @@
 /* our donate sector */
 .our-donate-container {
     display: flex;
+    margin-top: 100px;
+}
+
+.our-donate-subcontainer {
+    width: 360px;
+    height: 352px;
+    left: 157px;
+    top: 1595.5px;
+    border-radius: 5px;
+    margin: 0 auto;
+    text-align: left;
+    padding: 25px;
+}
+
+.bg-color-frist-child {
+    background: rgba(79, 157, 166, 0.1);
+    margin-left: 100px;
+}
+
+.bg-color-middle-child {
+    background: rgba(255, 89, 89, 0.1);
+}
+
+.bg-color-last-child {
+    background-color: #FFF4D6;
+    margin-right: 100px;
+
+}
+
+.our-donate-img {
+    margin-top: 60px;
+    margin-bottom: 20px;
+}
+
+.our-donate-title {
+    margin-bottom: 20px;
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.our-donate-description {
+    color: #707070;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: justify;
 }
